--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello World!</title>
-
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+
   </body>
 </html>
